--- a/views/programming/experiences.html
+++ b/views/programming/experiences.html
@@ -50,7 +50,7 @@
       </li>
       <li class="with-dot">
         Overall Class Assignments
-        <p>These were a variety of assignemts tha covered front/backend, web dev, Java, C and more</p>
+        <p>These were a variety of assignments tha covered front/backend, web dev, Java, C and more</p>
       </li>
     </ul>
   </div>
