--- a/views/programming/overview.html
+++ b/views/programming/overview.html
@@ -40,7 +40,7 @@
             <li class="with-dot">C</li>
             <li class="with-dot">React</li>
             <li class="with-dot">Azure, Entra</li>
-            <li class="with-dot">Windows Server/11/10</li>
+            <li class="with-dot">Windows Server/11/10, Ubuntu Desktop/Server</li>
         </ul>
         <p>If you would like to reach out, I do not have social media so email is the best way</p>
         <p><a href="mailto:elliottjwag@hotmail.com">Contact Me</a></p>
