--- a/views/programming/personal-projects.html
+++ b/views/programming/personal-projects.html
@@ -27,7 +27,9 @@
 <article>
   <h1>Personal Projects</h1>
   <h3>This page will showcase the projects I have done on a personal level</h3>
-  <!--TODO: THIS PAGE -->
+  <div class="contentDiv" id="centreDiv">
+    <p id="centerP">At the moment, I do not have any public personal projects availible to view online. However, please keep an eye on my GitHub and see what I post there!</p>
+  </div>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
