--- a/views/programming/strengths-and-weaknesses.html
+++ b/views/programming/strengths-and-weaknesses.html
@@ -25,9 +25,34 @@
   </ul>
 </nav>
 <article>
-  <h1>Welcome to My Programming World</h1>
-  <h3>This will give more of a specific look at my programming ability, both in my strengths and weaknesses</h3>
-  <!--TODO: THIS PAGE -->
+  <h1>Strengths and Weaknesses</h1>
+  <h3>This will give more of a specific look at my programming and IT ability, both in my strengths and weaknesses</h3>
+  <div class="contentDiv">
+    <h2 style="text-decoration: underline">Strengths</h2>
+    <ul class="with-dot">
+      <li class="with-dot">Web Development</li>
+      <li class="smallerLI">Creating, designing, and planing the functionality of websites are something that I enjoy quite a bit.
+        Whether it is setting up a mongoDB database to create and API, or tinkering with CSS, websites and its development are seriously intriguing to me.</li>
+      <li class="with-dot">Java</li>
+      <li class="smallerLI">This is the first programming language that I learned through Saskatchewan Polytechnic. All the way from the basics, to JavaFX, to servers and services like Javalin.
+        The backend capabilities with Java are something I have decent strength with that is only getting better.</li>
+      <li class="with-dot">Server Management</li>
+      <li class="smallerLI">I leaned how to manage servers through more school classes and projects. In both of these things we used ubuntu server mainly while also interacted with things
+        like Windows Server 2022 to do things like DHCP, ADDS and more</li>
+      <li class="with-dot">Cloud PaaS</li>
+      <li class="smallerLI">Microsoft Azure is a cloud computing platform I found interesting when we were first taught about it. The idea of being able to manage things from within a company, externally drove me to learn more about that industry.</li>
+      <li class="with-dot">Passion to learn</li>
+      <li class="smallerLI">While my education is a big reason that I know alot of the things I do, the drive to learn more about things we are taught is something I view as important.
+        Learning things like different API's, frontend technologies, and tools that assist Java like Spring Boot is what I like doing and recognize as important</li>
+    </ul>
+
+    <h2 style="text-decoration: underline">Weaknesses</h2>
+    <ul class="with-dot">
+      <li class="with-dot">Network Planning/Plotting</li>
+      <li class="with-dot">SQL Database Management</li>
+      <li class="with-dot">Face-to-Face Communication</li>
+    </ul>
+  </div>
 </article>
 <i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
 <script>
