--- a/views/projects/scoreboard/index.html
+++ b/views/projects/scoreboard/index.html
@@ -12,7 +12,6 @@
     <script src="https://kit.fontawesome.com/dcc0625c67.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<button id="sign-in">Log In</button>
 <nav id="nav-bar">
     <ul id="nav-list">
         <li id="EPL">EPL</li>
@@ -26,7 +25,7 @@
     </ul>
 </nav>
 <div id="scores">
-    <h1 id="sport">Select a Sport</h1>
+    <h1 id="sport">Scoreboard</h1>
     <h2 id="date">Date Goes Here</h2>
     <ul id="games-list">
 
@@ -38,5 +37,12 @@
 
     </ul>
 </div>
+<i class="fa-sharp-duotone fa-solid fa-circle-half-stroke" onclick="myFunction()" id="switchbtn"></i>
+<script>
+    function myFunction() {
+        let element = document.body;
+        element.classList.toggle("light");
+    }
+</script>
 </body>
 </html>
