--- a/views/projects/scoreboard/game.html
+++ b/views/projects/scoreboard/game.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Game</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Elliott Wagner" />
+    <script src="/scripts/scoreboard/games.js"></script>
+    <meta name="description" content="Elliott Wagner's website that shows off his IT and Announcing side.">
+    <link rel="icon" href="/images/icon.png">
+    <link rel="stylesheet" type="text/css" href="/css/scoreboard/scoreboard.css">
+    <script src="https://kit.fontawesome.com/dcc0625c67.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<nav>
+    <a href="/scoreboard" >Back to scoreboard</a>
+</nav>
+<div id="game-info">
 
+</div>
 </body>
 </html>
