--- a/views/projects/scoreboard/index.html
+++ b/views/projects/scoreboard/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Scoreboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Elliott Wagner (and AI)" />
+    <meta name="author" content="Elliott Wagner" />
     <script src="/scripts/scoreboard/index.js"></script>
     <meta name="description" content="Elliott Wagner's website that shows off his IT and Announcing side.">
     <link rel="icon" href="/images/icon.png">
