--- a/views/projects/scoreboard/game.html
+++ b/views/projects/scoreboard/game.html
@@ -8,7 +8,7 @@
     <script src="/scripts/scoreboard/games.js"></script>
     <meta name="description" content="Elliott Wagner's website that shows off his IT and Announcing side.">
     <link rel="icon" href="/images/icon.png">
-    <link rel="stylesheet" type="text/css" href="/css/scoreboard/scoreboard.css">
+    <link href="/css/scoreboard/game.css" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/dcc0625c67.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -16,7 +16,17 @@
     <a href="/scoreboard" >Back to scoreboard</a>
 </nav>
 <div id="game-info">
+    <div id="game-container">
+        <div id="game-header">
+            <h1 id="game-name"></h1>
+        </div>
+        <div id="game-scoreboard">
 
+        </div>
+        <div id="venue-stuff">
+            <h3>Venue Information</h3>
+        </div>
+    </div>
 </div>
 </body>
 </html>
