--- a/views/programming/personal-projects.html
+++ b/views/programming/personal-projects.html
@@ -30,6 +30,7 @@
   <div class="contentDiv" id="centreDiv">
     <ul>
       <li><a href="/scoreboard">Scoreboard</a></li>
+      <li><a href="/pokemon">Pokemon Search</a></li>
     </ul>
   </div>
 </article>
