added stuff to my weather project

--- a/views/programming/personal-projects.html
+++ b/views/programming/personal-projects.html
@@ -31,6 +31,7 @@
     <ul>
       <li><a href="/scoreboard">Scoreboard</a></li>
       <li><a href="/pokemon">Pokemon Search</a></li>
+      <li><a href="/weather">Weather</a></li>
     </ul>
   </div>
 </article>
