--- a/public/css/weather/styles.css
+++ b/public/css/weather/styles.css
@@ -1,19 +1,40 @@
-body{
-    font-family: "Century Gothic", sans-serif;
-    background-color: hsl(0, 0%, 95%);
-    margin: 0;
+body {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    margin: 0;
+    background-color: black;
+    color: #fff;
+    transition: background-color 0.3s, color 0.3s;
+    animation: fadeInAnimation ease 2s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 .weatherForm{
+    color: white;
     margin: 20px;
+    box-shadow: white 0px 0px 15px;
+    border-radius: 15px;
 }
 .cityInput{
     padding: 10px;
     font-size: 2rem;
     font-weight: bold;
     border: 2px solid black;
+    background-color: black;
+    color: white;
     border-radius: 10px;
     margin: 10px;
     width: 300px;
@@ -22,54 +43,57 @@ button[type="submit"]{
     padding: 10px 20px;
     font-weight: bold;
     font-size: 2rem;
-    background-color: darkblue;
+    background-color: blue;
+    box-shadow: blue 0px 0px 15px;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-right: 15px;
 }
 button[type="submit"]:hover{
     background-color: lightskyblue;
 }
 .card{
-    background: linear-gradient(180deg, lightgreen, darkgreen);
     padding: 50px;
-    box-shadow: 2px 2px 5px;
+    border-radius: 15px;
+    box-shadow: white 0px 0px 25px;
     min-width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center; /*horizonatlly aligns*/
 }
 h1{
+    color: white;
     font-size: 3.5rem;
     margin-top: 0;
     margin-bottom: 25px;
 }
 p{
+    color: white;
     font-size: 1.5rem;
     margin: 5px 0;
 }
 .cityDisplay, .tempDisplay{
+    color: white;
     font-size: 3.5rem;
     font-weight: bold;
-    color: hsl(0, 0%, 0%, 0.75);
     margin-bottom: 25px;
 }
 .humidityDisplay{
+    color: white;
     font-weight: bold;
     margin-bottom: 25px;
 }
 .descDisplay{
+    color: white;
     font-style: italic;
     font-weight: bold;
     font-size: 2rem;
 }
-.weatherEmoji{
-    margin: 0;
-    font-size: 7.5rem;
-}
+
 .errorDisplay{
     font-size: 2.5rem;
     font-weight: bold;
-    color: hsl(0, 0%, 0%, 75%);
+    color: white;
 }
