added blackjack project

--- a/views/programming/personal-projects.html
+++ b/views/programming/personal-projects.html
@@ -32,6 +32,7 @@
       <li><a href="/scoreboard">Scoreboard</a></li>
       <li><a href="/pokemon">Pokemon Search</a></li>
       <li><a href="/weather">Weather</a></li>
+      <li><a href="/blackjack">BlackJack</a></li>
     </ul>
   </div>
 </article>
