added some stuff. remember to use nodemon app.js to start

--- a/views/programming/experiences.html
+++ b/views/programming/experiences.html
@@ -33,6 +33,10 @@
     <p>Some of these events and experiences include: </p>
     <ul class="with-dot">
       <li class="with-dot">
+        2025 Sask Polytech Applied Research Showase
+        <p>This was a convention in Saskatoon Saskatchewan where me and my capstone team presented our camera and sensor project</p>
+      </li>
+      <li class="with-dot">
         2025 Sask Polytech Hackathon
         <p>This was a coding competition held by Saskatchewan Polytechnic</p>
       </li>
