--- a/views/programming/other.html
+++ b/views/programming/other.html
@@ -26,7 +26,7 @@
 </nav>
 <article>
   <h1>Other</h1>
-  <h3>Here are some of my other links</h3>
+  <h3>Here are some of my other links. I use some of these while for some I havnt been on in a while</h3>
   <!--TODO: THIS PAGE, CREATE/DECORATE ACCOUNTS -->
   <div class="contentDiv">
     <ul>
