--- a/views/programming/strengths-and-weaknesses.html
+++ b/views/programming/strengths-and-weaknesses.html
@@ -25,7 +25,7 @@
   </ul>
 </nav>
 <article>
-  <h1>Strengths and Weaknesses</h1>
+  <h1>Strengths</h1>
   <h3>This will give more of a specific look at my programming and IT ability, both in my strengths and weaknesses</h3>
   <div class="contentDiv">
     <h2 style="text-decoration: underline">Strengths</h2>
@@ -44,13 +44,6 @@
       <li class="with-dot">Passion to learn</li>
       <li class="smallerLI">While my education is a big reason that I know alot of the things I do, the drive to learn more about things we are taught is something I view as important.
         Learning things like different API's, frontend technologies, and tools that assist Java like Spring Boot is what I like doing and recognize as important</li>
-    </ul>
-
-    <h2 style="text-decoration: underline">Weaknesses</h2>
-    <ul class="with-dot">
-      <li class="with-dot">Network Planning/Plotting</li>
-      <li class="with-dot">SQL Database Management</li>
-      <li class="with-dot">Face-to-Face Communication</li>
     </ul>
   </div>
 </article>
