--- a/views/programming/programming.html
+++ b/views/programming/programming.html
@@ -26,12 +26,12 @@
 </nav>
 <article>
     <h1>Elliott Wagner</h1>
-    <h3>Welcome to my Programing page!</h3>
+    <h3>Welcome to my Programming page!</h3>
      <div class="contentDiv" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
-        <p>Welcome to my programming page. This website will consist of displaying my skills, weakenesses, expereinces and and overall explenation of my programming ability.</p>
+        <p>Welcome to my programming page. This website will consist of displaying my skills, weaknesses, experiences and and overall explanation of my programming ability.</p>
         <p>To get an introduction into me, go to the overview tab</p>
         <p>To get an feel for my abilities and shortcomings into me, go to the strengths and weaknesses tab</p>
-        <p>If youd like to know about my past tech experiences, check the experiences page</p>
+        <p>If you would like to know about my past tech experiences, check the experiences page</p>
         <p>To view my GitHub page and see what I have been working on, click the GitHub tab</p>
         <p>I have some pretty cool personal projects (some still under construction) on my personal projects screen</p>
         <p>The rest of my links are on the other tab</p>
