--- a/public/css/announcing.css
+++ b/public/css/announcing.css
@@ -28,7 +28,36 @@ body {
 
 }
 
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+  box-shadow: 0 0 90px #0000ff;
+  padding: 0;
+  border-bottom: 0;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  background: white;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ff0000;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: gray;
+}
+
+/* Track on hover */
+::-webkit-scrollbar-track:hover {
+  background: #ff0000;
+  border-radius: 10px;
+}
 
 /* Navigation styles */
 #announcingNav {
