--- a/views/programming/experiences.html
+++ b/views/programming/experiences.html
@@ -27,13 +27,12 @@
 <article>
   <h1>Experiences</h1>
   <h3>This page describes my experiences including group projects and more</h3>
-  <!--TODO: INDAVISUAL DETAILS -->
   <div class="contentDiv">
     <p>Through my journey in programming, specifically though my schooling, I have had many opportunities to display, hone, and grow my abilities.</p>
     <p>Some of these events and experiences include: </p>
     <ul class="with-dot">
       <li class="with-dot">
-        2025 Sask Polytech Applied Research Showase
+        2025 Sask Polytech Applied Research Showcase
         <p>This was a convention in Saskatoon Saskatchewan where me and my capstone team presented our camera and sensor project</p>
       </li>
       <li class="with-dot">
@@ -54,7 +53,7 @@
       </li>
       <li class="with-dot">
         Overall Class Assignments
-        <p>These were a variety of assignments tha covered front/backend, web dev, Java, C and more</p>
+        <p>These were a variety of assignments tha covered front/backend, Web Development, Java, C and more</p>
       </li>
     </ul>
   </div>
