--- a/views/programming/other.html
+++ b/views/programming/other.html
@@ -26,13 +26,13 @@
 </nav>
 <article>
   <h1>Other</h1>
-  <h3>Here are some of my other links. I use some of these while for some I havnt been on in a while</h3>
+  <h3>Here are some of my other links. I use some of these while for some I haven't been on in a while</h3>
   <!--TODO: THIS PAGE, CREATE/DECORATE ACCOUNTS -->
   <div class="contentDiv">
     <ul>
       <li><a href="https://www.linkedin.com/in/elliott-wagner" target="_blank">LinkedIn</a></li>
       <li><a href="https://www.w3profile.com/si1ent306" target="_blank">W3Schools</a></li>
-      <li><a href="https://leetcode.com/u/si1ent306/" target="_blank">Leetcode</a></li>
+      <li><a href="https://leetcode.com/u/si1ent306/" target="_blank">LeetCode</a></li>
       <li><a href="https://www.freecodecamp.org/si1ent306" target="_blank">FreeCodeCamp</a></li>
       <li> <a href="https://www.geeksforgeeks.org/user/elliottwacrz8/" target="_blank">GeeksForGeeks</a></li>
     </ul>
