added goalscoreres and ucl to soccer

--- a/views/projects/scoreboard/index.html
+++ b/views/projects/scoreboard/index.html
@@ -18,6 +18,7 @@
         <li id="laliga">LaLiga</li>
         <li id="bundesliga">Bundesliga</li>
         <li id="Serie A">Serie A</li>
+        <li id="UCL">UCL</li>
         <li id="basketball">Basketball</li>
         <li id="NFL">NFL</li>
         <li id="baseball">Baseball</li>
